// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text -- Web should have the correct font family 1`] = `
<Text
  style={
    Array [
      Object {
        "margin": 0,
      },
      Object {
        "fontStyle": "italic",
      },
      Object {
        "fontWeight": "700",
      },
      Object {
        "fontFamily": "Roboto",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Web should have the default font family -- EXPO 1`] = `
<Text
  style={
    Array [
      Object {
        "margin": 0,
      },
      Object {
        "fontFamily": "Roboto",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Web should have the default font family -- EXPO 2`] = `
<Text
  style={
    Array [
      Object {
        "margin": 0,
      },
      Object {
        "fontWeight": "700",
      },
      Object {
        "fontFamily": "Roboto",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Web should have the default font family -- EXPO 3`] = `
<Text
  style={
    Array [
      Object {
        "margin": 0,
      },
      Object {
        "fontStyle": "italic",
      },
      Object {
        "fontFamily": "Roboto",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Web should have the default font family -- EXPO 4`] = `
<Text
  style={
    Array [
      Object {
        "margin": 0,
      },
      Object {
        "fontStyle": "italic",
      },
      Object {
        "fontWeight": "700",
      },
      Object {
        "fontFamily": "Roboto",
      },
    ]
  }
>
  Lorem
</Text>
`;
